# videoPOS-desktop

./: package-lock.json  package.json
.github/workflows/: main.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/happytime-onvif-server-x64/: config.xml
src-tauri/binaries/happytime-onvif-server-x64/html/: main.html
src-tauri/icons/: icon.icns
src-tauri/recources/happytime-onvif-server-x64/: runme.bat
src-tauri/recources/happytime-onvif-server-x64/happytime-rtsp-server/: readme.txt
src-tauri/src/: cmd.rs  config.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/test/: mod.rs
src-tauri/src/license/: internet.rs  manager.rs  mod.rs
src/page/: Home.tsx  Loading.tsx  Setup.tsx
