[package]
name = "video_pos"
version = "0.0.0"
description = "ONVIF IP Camera emulator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["test-util", "macros"] }
machineid-rs = "1.2.4"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
