[package]
name = "video_pos"
version = "0.0.0"
description = "ONVIF IP Camera emulator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "shell-sidecar", "fs-all", "path-all", "shell-open", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["test-util", "macros"] }
machineid-rs = "1.2.4"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"
auto-launch = "0.5.0"
quick-xml = "0.22.0"
get_if_addrs = "0.5.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.